# OpenGL_Project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: Dependency.cmake
cmake/dependencies/: assimp.cmake  glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  spdlog.cmake  stb_image.cmake
shader/: envmap.frag  envmap.vert  gamma.frag  invert.frag  lighting.frag  lighting.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  texture.frag  texture.vert
src/: buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_layout.cpp  vertex_layout.h
